[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/gui/botones/boton_Verde.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/botones/boton_lechuga.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/botones/boton_rojo.png" type="Texture" id=3]
[ext_resource path="res://GUI/gui_pantallas/fuentes_gui/ventana_pausa.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/gui/botones/sonido_lechuga.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/botones/sonido_verde.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/png/Window_pausa.png" type="Texture" id=7]
[ext_resource path="res://GUI/gui_pantallas/fuentes_gui/fuente_botones.tres" type="DynamicFont" id=8]
[ext_resource path="res://GUI/gui_pantallas/ventana_pausa.gd" type="Script" id=9]
[ext_resource path="res://assets/gui/botones/sonido_plomo.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "EJEM"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 467.783, 277.289 ), Vector2( 1312.99, -302.09 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "entrada"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 481.288, -267.827 ), Vector2( 471.466, 279.745 ), Vector2( 469.011, 262.556 ), Vector2( 467.783, 277.289 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "salida"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 467.783, 277.289 ), Vector2( 464.1, 252.734 ), Vector2( 461.644, 277.289 ), Vector2( 498.476, -259.232 ) ]
}

[node name="Sprite" type="Sprite"]
position = Vector2( 1303.42, -297.307 )
scale = Vector2( 0.791403, 0.752625 )
texture = ExtResource( 7 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = -126.922
margin_top = -284.0
margin_right = 119.078
margin_bottom = -216.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.870588, 0.705882, 0.584314, 1 )
text = "PAUSA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_sonido" type="TextureButton" parent="."]
margin_left = -51.197
margin_top = -158.636
margin_right = 42.803
margin_bottom = -51.6359
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_volver" type="TextureButton" parent="."]
margin_left = -109.067
margin_top = -17.2249
margin_right = 110.933
margin_bottom = 51.7751
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_volver"]
margin_left = 45.4836
margin_top = 15.6156
margin_right = 178.484
margin_bottom = 53.6156
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.988235, 0.980392, 1 )
text = "VOLVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_reiniciar" type="TextureButton" parent="."]
margin_left = -106.9
margin_top = 76.1878
margin_right = 113.1
margin_bottom = 145.188
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_reiniciar"]
anchor_left = -0.0197698
anchor_top = -0.114043
anchor_right = -0.00844421
anchor_bottom = 1.02831
margin_left = 25.325
margin_top = 23.6574
margin_right = 204.833
margin_bottom = -15.165
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.988235, 0.980392, 1 )
text = "REINICIAR"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_menu" type="TextureButton" parent="."]
margin_left = -105.817
margin_top = 161.626
margin_right = 114.183
margin_bottom = 230.626
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="btn_menu"]
margin_left = 55.0427
margin_top = 14.1796
margin_right = 164.043
margin_bottom = 53.1796
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.988235, 0.980392, 1 )
text = "MENÃš"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animacion" type="AnimationPlayer" parent="."]
autoplay = "entrada"
method_call_mode = 1
anims/EJEM = SubResource( 1 )
anims/entrada = SubResource( 2 )
anims/salida = SubResource( 3 )
[connection signal="pressed" from="btn_sonido" to="." method="_on_btn_sonido_pressed"]
[connection signal="pressed" from="btn_volver" to="." method="_on_btn_volver_pressed"]
[connection signal="pressed" from="btn_reiniciar" to="." method="_on_btn_reiniciar_pressed"]
[connection signal="pressed" from="btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="animation_finished" from="animacion" to="." method="_on_animacion_animation_finished"]
